# CGSDK

./: .gitignore  CMakeLists.txt  README.md
src/example/: main.cc
src/sdk/: api.cc  api.hpp  api_funcs.inc  def_export_event.hpp  event.cc  event.hpp  event_callback.hpp  game_define.hpp
src/sdk/include/: sdk.h  sdk.hpp
